// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Help> when rendered with a message node renders <Help> with a <Popover /> 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      className={undefined}
      id="hello-world"
      placement="right"
    >
      <span>
        'Hello World'
      </span>
    </Tooltip>
  }
  placement="bottom"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span>
    <Info />
  </span>
</OverlayTrigger>
`;

exports[`<Help> when rendered with a popover overlay type renders <Help> with a <Popover /> 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className={undefined}
      id="hello-world"
      placement="right"
    >
      Hello World
    </Popover>
  }
  placement="bottom"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span>
    <Info />
  </span>
</OverlayTrigger>
`;

exports[`<Help> when rendered with an overlay class name renders a <Tooltip /> in <Help /> with a custom class 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      className="overlayClassName"
      id="hello-world"
      placement="right"
    >
      Hello World
    </Tooltip>
  }
  placement="bottom"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span>
    <Info />
  </span>
</OverlayTrigger>
`;

exports[`<Help> when rendered with children renders <Help> with children 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      className={undefined}
      id="hello-world"
      placement="right"
    >
      Hello World
    </Tooltip>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span>
    Hello World
  </span>
</OverlayTrigger>
`;

exports[`<Help> when rendered with required props renders <Help> with the right props 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      className={undefined}
      id="help-foo"
      placement="right"
    >
      Here is your help
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span>
    <Info />
  </span>
</OverlayTrigger>
`;
